syntax = "proto3";

message Price {
  float amount = 1;
  string currency = 2;
}

message V1GetProductsHttpRequest {
  repeated string fields = 1;
  optional int32 offset = 2;
  optional int32 limit = 3;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  Price price = 3;
  optional string imageurl = 4;
  optional string description = 5;
  optional string message = 6;
}

message V1GetProductsHttpResponse { repeated ProductResponse products = 1; }
