syntax = "proto3";

enum CurrencyEnum {
  USD = 0;
}

message Price {
  float amount = 1;
  string currency = 2;
}

message V1CreateProductHttpRequest {
  string name = 1;
  Price price = 2;
  bytes image = 3;
  optional string description = 4;
}

message V1CreateProductHttpResponse {
  string productId = 1;
  string name = 2;
  Price price = 3;
  string imageUrl = 4;
  optional string description = 5;
  string message = 6;
}
